# AI-academy-2026

./: .env.example  .gitignore  IMPLEMENTATION_PROGRESS.md  README.md  package-lock.json  pyproject.toml
data/curated/: PROVENANCE.md  README.md  ambiguity_patterns.md  clarified_examples.md  guidelines.md  sample_requirements.md
docs/: architecture.md  demo.md  quickstart.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
scripts/: dev.ps1
src/: api.py  cli.py  main.py
src/ai_analyzer/: __init__.py  analysis.py  config.py  doclist.py  embeddings.py  eval.py  ingest.py  llm.py  logging_utils.py  prompts.py  qa.py  reflection.py  retrieval.py  retry_utils.py  schemas.py  tools.py
tests/fixtures/: simple_eval.json
